test/e2e/features/backendconfigpolicy/testdata/dns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dns-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "dns.example.com"
  rules:
    - backendRefs:
        - name: dns-backend
          kind: Backend
          group: gateway.kgateway.dev
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: dns-backend
  namespace: kgateway-base
spec:
  type: Static
  static:
    hosts:
      - host: nginx.kgateway-base.svc.cluster.local
        port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: dns-policy
  namespace: kgateway-base
spec:
  targetRefs:
    - name: dns-backend
      group: gateway.kgateway.dev
      kind: Backend
  dns:
    dnsRefreshRate: 60s
    dnsJitter: 15s
