test/e2e/features/backendconfigpolicy/testdata/missing-target.yaml
kind: BackendConfigPolicy
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: example-policy
  namespace: kgateway-base
spec:
  targetRefs:
    - name: missing-svc
      group: ""
      kind: Service
  connectTimeout: 5s
