test/e2e/features/backendconfigpolicy/testdata/outlierdetection.yaml
kind: BackendConfigPolicy
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: backend-outlier-detection-policy
  namespace: kgateway-base
spec:
  targetRefs:
    - name: httpbin
      group: ""
      kind: Service
  outlierDetection:
    consecutive5xx: 1
    maxEjectionPercent: 51
    interval: 10ms
    baseEjectionTime: 600s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "httpbin.example.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8080
