test/e2e/features/backendconfigpolicy/testdata/simple-tls.yaml
kind: BackendConfigPolicy
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: backend-tls-policy
  namespace: kgateway-base
spec:
  targetRefs:
    - name: nginx
      group: ""
      kind: Service
  tls:
    secretRef:
      name: nginx-tls
    simpleTLS: true
---
apiVersion: v1
kind: Secret
type: kubernetes.io/tls
metadata:
  name: nginx-tls
  namespace: kgateway-base
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVSWx2K3V3OU8xZ1R3S25mNEh2Q0lGdXNIV2g0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3SGhjTk1qWXdOekEzTVRZME9UTTJXaGNOTXpZdwpOekEwTVRZME9UTTJXakFXTVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdmJUQ0NBU0l3RFFZSktvWkkKaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKSml3L3NhWW9YRG52SjJoZ0xHRXJOL0RFT1U3TkNGRTdoNXRFQ2EKOHVUbUJWMm0yYlhubFhqZzZ1bUIwclBzS1NPblNwRjJxQ3Q2NExsN0krL2tPRHl1L1ZrdWhZQS9raTVXaTMyVgp1RlU3c2NiMUZ3YnVoTk [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lVVnZ6QlFqcFpGWllFbEdGVG1JUTNJK0lVaTFZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1p6RUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eEZUQVRCZ05WQkFvTURFVjRZVzF3YkdVZ1NXNWpMakVVTUJJR0ExVUVBd3dMClpYaGhiWEJzWlM1amIyMHdIaGNOTWpVd01qSTFNakExTXpVMldoY05NelV3TWpJek1qQTFNelUyV2pCbk1Rc3cKQ1FZRFZRUUdFd0pWVXpFVE1CRUdBMVVFQ0F3S1EyRnNhV1p2Y201cFlURVdNQlFHQTFVRUJ3d05VMkZ1SUVaeQpZVzVqYVhOamJ6RVZNQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ2dvRHpEendJT0xzRTcKODdNbFc2Vkx6S0EybjU2djAyejF0NHFqUTB2cGtjdnNQQ1dWLysvZER0NSsrNkdnVU1NL1FPMlpPN0pKb0cvRApFa05Hb2NMenQrSUVpaG81ZmxMZGlXRXY2MXVvQ2pHMzBlUXVZVGx1RXBsd1R0Z2wwUGhUdm41OFBsRVk4VlQwCnJqL3FTcERJUUZhVWIxVDMzMTlwbmpqUit0N1ZqV1dhUlllS0FFUEd2b3RRRzNxdTA1YVBERmcyZExheWs0cEEKYnlBcnlrSjIvOVo5N3NSajVQaUcrcGg3MFFncS9uQklFRk9RNEJtR0FzdksyR2FQbWhNd1F1M1RLUXJxNW43cQpIMWl0S0pVTDB2ajJNN [...]
